--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <script src="%PUBLIC_URL%/splash.js"></script>
     <title>Portfolio About Page</title>
   </head>
   <body>
